--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,14 @@
     outline: none;
     scroll-behavior: smooth;
     font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
     font-variant: small-caps;
 }
 
 :root {
     --bg-color: #1b1521;
-    --second-bg-color: #323232;
-    --text-color: #fff;
-    --main-color: rgb(255, 0, 144);
+    --second-bg-color: #350b00;
+    --text-color: #f8cff6;
+    --main-color: rgb(255, 6, 118);
 }
 
 html {
@@ -30,6 +29,80 @@ body {
     color: var(--text-color);
 }
 
+section{
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+
+}
+
 .header {
-    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9%;
+    background: var(--bg-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo {
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight: 545;
+    cursor: default;
+
+}
+
+.navbar a {
+    font-size: 2.5rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    transition: .3s;
+
+}
+
+.navbar a:hover,
+.navbar a.active{
+    color: var(--main-color);
+}
+
+#menu-icon{
+    font-size: 3.8rem;
+    color: var(--text-color);
+    display: none;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.home-img img{
+    width: 35vw;
+    border-radius: 2%;
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.home-content h3{
+    font-size: 3.5rem;
+    font-weight: 540;
+}
+
+.home-content h3:nth-of-type(2){
+    margin-bottom: 2rem;
+}
+
+span{
+    color: var(--main-color);
+}
+
+.home-content h1{
+    font-size: 5.9rem;
+    font-weight: 540;
+    line-height: 1.3;
 }
