--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,14 @@
 
 :root {
     --bg-color: #1b1521;
-    --second-bg-color: #350b00;
+    --second-bg-color: #2b242d;
     --text-color: #f8cff6;
     --main-color: rgb(255, 6, 118);
 }
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
@@ -105,4 +105,48 @@ span{
     font-size: 5.9rem;
     font-weight: 540;
     line-height: 1.3;
+}
+
+.portfolio{
+    background: var(--second-bg-color);
+}
+
+.portfolio h2{
+    margin-bottom: 4rem;
+    font-size: 5rem;
+    font-weight: 540;
+    
+}
+
+.portfolio-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.portfolio-container .porfolio-box{
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+
+.porfolio-box img{
+    width: 100%;
+}
+
+.porfolio-box .portfolio-layer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
 }
