--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,21 @@ section{
     width: 35vw;
     border-radius: 2%;
     box-shadow: 0 0 1rem var(--main-color);
+    animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage{
+    0%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(-2.4rem);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
 }
 
 .home-content h3{
@@ -262,6 +277,10 @@ span{
         padding: 10rem 3% 2rem;
     }
 
+    .portfolio{
+        padding-bottom: 7rem;
+    }
+
     .footer{
         padding: 2rem 3%;
     }
@@ -293,5 +312,57 @@ span{
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
+    }
+
+    .home{
+       flex-direction: column; 
+    }
+
+    .home-content h3{
+        font-size: 2.6rem;
+    }
+
+    .home-content h1{
+        font-size: 5rem;
+    }
+
+    .home-img img{
+        width: 70vw;
+        margin-top: 4rem;
+    }
+
+    .portfolio h2{
+        margin-bottom: 3rem; 
+    }
+
+    .portfolio-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-widith: 617px){
+    .portfolio-container{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 450px){
+    html{
+        font-size: 50%;
+    }
+}
+
+@media (max-width: 450px){
+    .home-img img{
+        width: 90vw;
+    }
+
+    .footer{
+        flex-direction: column-reverse;
+    }
+
+    .footer p{
+        text-align: center;
+        margin-top: 2rem;
     }
 }
