--- a/styles.css
+++ b/styles.css
@@ -366,3 +366,27 @@ span{
         margin-top: 2rem;
     }
 }
+
+.art-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        gap: 2.5rem;
+    
+}
+
+.art h2{
+    margin-bottom: 4rem;
+    font-size: 5rem;
+    font-weight: 540;
+    
+    
+}
+
+.art-container .porfolio-box{
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
